Fixed Java compatibility issues: downgraded to Java 17 and replaced List.getFirst() with get(0)